Upgrade build toolchain